# DoubleDutch

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LDserver.cpp  LDserver.h  README.md  config.txt  docker-compose.yml  main.cpp
.github/workflows/: build.yml
SSL/: Readme.txt  certificate.crt  privateKey.key
examples/: pythonRequest.py
src/: BackupManager.h  CMakeLists  CMakeLists.txt  DDrequest.cpp  DDrequest.h  DDserver.cpp  DDserver.h  LMserver.cpp  LMserver.h  Lock.h  LockManager.h  Request.h  Settings.h  backupManager.cpp  lock.cpp  lockManager.cpp  main.cpp  request.cpp  settings.cpp
tests/: test_server.py
